--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
+    <!-- jQuery -->
+    <script src="{% static 'js/jquery-3.6.0.min.js' %}"></script>
+
     <title>Document</title>
 </head>
 
@@ -14,5 +17,9 @@
     {% block content %}
     {% endblock %}
 </body>
+
+
+{% block postload_js %}
+{% endblock %}
 
 </html>
