--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,10 @@
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
     <!-- jQuery -->
     <script src="{% static 'js/jquery-3.6.0.min.js' %}"></script>
-
+    <!-- FontAwesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+        integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Document</title>
 </head>
 
