--- a/src/main/resources/templates/game.html
+++ b/src/main/resources/templates/game.html
@@ -1,22 +1,28 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
-  <head>
-  	<meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Custom CSS -->
-    <link rel="stylesheet" th:href="@{css/base.css}">
-    <!-- jQuery -->
-    <script th:src="@{js/jquery-3.6.0.min.js}"></script>
-    
-    <title>Chase Game</title>
-  </head>
-  
-  <body>
+	xmlns:th="http://www.thymeleaf.org">
+<head>
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!-- Custom CSS -->
+<link rel="stylesheet" th:href="@{css/base.css}">
+<!-- jQuery -->
+<script th:src="@{js/jquery-3.6.0.min.js}"></script>
+<!-- FontAwesome -->
+<link rel="stylesheet"
+	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+	integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
+	crossorigin="anonymous" referrerpolicy="no-referrer" />
+<title>Chase Game</title>
+</head>
+
+<body>
+
+	<div th:each="row: ${rows}">
+		<div th:each="column: ${columns}" class="bo cell" data-y="${row}" data-x="${column}"></div>
+	</div>
 
 
-
-
-  </body>
+</body>
 </html>
