--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -25,26 +25,47 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
 
-	<title>Chase Game</title>
+	<title>Chase Game - Registration</title>
 </head>
 
 <body>
 
+	<div class="container">
+		<div class="row">
+			<form class="col s12" th:action="@{/register}" id="registrationForm" method="post">
 
+				<div class="row">
+					<div class="col s6">
+						<div class="input-field">
+							<label for="username">Username: </label>
+							<input type="text" name="username" class="validate" /><br />
+						</div>
+						<div class="input-field">
+							<label for="fullname">Full name: </label>
+							<input type="text" name="fullname" class="validate" /><br />
+						</div>
+					</div>
+					<div class="col s6">
+						<div class="input-field">
+							<label for="password">Password: </label>
+							<input type="password" name="password" class="validate" /><br />
+						</div>
+						<div class="input-field">
+							<label for="confirm">Confirm password: </label>
+							<input type="password" name="confirm" class="validate" /><br />
+						</div>
+					</div>
+				</div>
 
-	<div th:each="row : ${gameBoard.gameBoardRows}">
-		<div th:each="cell : ${row}" th:attr="data-x=${cell.coordinates.y}, data-y=${cell.coordinates.x}"
-			class="bo cell"></div>
+				<div class="row">
+					<div class="col s12">
+						<input class="waves-effect waves-light btn" type="submit" value="Register" />
+					</div>
+				</div>
+
+			</form>
+		</div>
 	</div>
-
-	<script th:inline="javascript">
-		const ROWS = /*[[${gameBoard.totalRows}]]*/ 5;
-		const COLS = /*[[${gameBoard.totalColumns}]]*/ 5;
-	</script>
-
-
-	<script type="module" th:src="@{game/js/game.js}"></script>
-
 
 </body>
 
