--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -36,13 +36,13 @@
                 <h1>Chase Game</h1>
             </div>
             <div class="row">
-                <div class="col s6">
+                <div class="col s6 center-align">
                     <a class="waves-effect waves-light btn" th:href="@{/game}">Start Game</a>
                 </div>
-                <div class="col s6">
+                <div class="col s6 center-align">
                     <a class="waves-effect waves-light btn" th:href="@{/register}">Register</a>
                 </div>
-                <div class="col s6">
+                <div class="col s6 center-align">
                     <a class="waves-effect waves-light btn" th:href="@{/login}">Login</a>
                 </div>
             </div>
