add score calculator

--- a/src/main/resources/templates/game.html
+++ b/src/main/resources/templates/game.html
@@ -46,6 +46,12 @@
 			<div id="timer"></div>
 		</div>
 	</div>
+	<div class="row">
+		<div class="col s12">
+			<h3>Game Log</h3>
+			<div id="messages"></div>
+		</div>
+	</div>
 
 	<script th:inline="javascript">
 		const ROWS = /*[[${gameBoard.totalRows}]]*/ 5;
