--- a/src/main/resources/templates/game.html
+++ b/src/main/resources/templates/game.html
@@ -31,11 +31,19 @@
 <body>
 
 
+
 	<div class="row">
-		<div class="col s12">
+		<div class="col s8">
 			<div th:each="row : ${gameBoard.gameBoardRows}">
 				<div th:each="cell : ${row}" th:attr="data-x=${cell.coordinates.y}, data-y=${cell.coordinates.x}"
 					class="bo cell"></div>
+			</div>
+		</div>
+		<div class="col s4">
+			<h3>Game Log</h3>
+			<div class="game-log">
+				<ul class="collection" id="messages">
+				</ul>
 			</div>
 		</div>
 	</div>
@@ -46,12 +54,7 @@
 			<div id="timer"></div>
 		</div>
 	</div>
-	<div class="row">
-		<div class="col s12">
-			<h3>Game Log</h3>
-			<div id="messages"></div>
-		</div>
-	</div>
+
 
 	<script th:inline="javascript">
 		const ROWS = /*[[${gameBoard.totalRows}]]*/ 5;
