--- a/src/main/resources/templates/game.html
+++ b/src/main/resources/templates/game.html
@@ -47,6 +47,9 @@
 				<ul class="collection" id="messages">
 				</ul>
 			</div>
+			<div>
+				<a th:href="@{/leaderboards}" class="waves-effect waves-light btn">View Leaderboards</a>
+			</div>
 		</div>
 	</div>
 
