--- a/src/main/resources/templates/game.html
+++ b/src/main/resources/templates/game.html
@@ -60,6 +60,17 @@
 		</div>
 	</div>
 
+	<!-- Modal Structure -->
+	<div id="modal-end-game" class="modal">
+		<div class="modal-content">
+			<h4>Modal Header</h4>
+			<p>A bunch of text</p>
+		</div>
+		<div class="modal-footer">
+
+		</div>
+	</div>
+
 
 	<script th:inline="javascript">
 		const ROWS = /*[[${gameBoard.totalRows}]]*/ 5;
