--- a/src/main/resources/templates/setup.html
+++ b/src/main/resources/templates/setup.html
@@ -32,23 +32,8 @@
 
     <div class="container">
         <div class="row">
-            <div class="col s12">
-                <h1>Chase Game</h1>
-            </div>
-            <div class="row">
-                <div class="col s6 center-align">
-                    <a class="waves-effect waves-light btn" th:href="@{/game}">Start Game</a>
-                </div>
-                <div class="col s6 center-align">
-                    <a class="waves-effect waves-light btn" th:href="@{/register}">Register</a>
-                </div>
-                <div class="col s6 center-align">
-                    <a class="waves-effect waves-light btn" th:href="@{/login}">Login</a>
-                </div>
-                <div class="col s6 center-align">
-                    <a class="waves-effect waves-light btn" th:href="@{/game/setup}">Setup</a>
-                </div>
-            </div>
+            <div class="col s6">Test</div>
+            <div class="col s6">Test</div>
         </div>
     </div>
 
