(WIP) add options for game setup

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -46,7 +46,7 @@
                     <a class="waves-effect waves-light btn" th:href="@{/login}">Login</a>
                 </div>
                 <div class="col s6 center-align">
-                    <a class="waves-effect waves-light btn" th:href="@{/game/setup}">Setup</a>
+                    <a class="waves-effect waves-light btn" th:href="@{/setup}">Setup</a>
                 </div>
             </div>
         </div>
