--- a/src/main/resources/templates/setup.html
+++ b/src/main/resources/templates/setup.html
@@ -9,21 +9,17 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" th:href="@{css/base.css}">
 
-    <!-- jQuery -->
-    <script th:src="@{js/jquery-3.6.0.min.js}"></script>
+    <!-- Custom CSS -->
+    <link rel="stylesheet" th:href="@{css/game-setup.css}">
 
     <!-- FontAwesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
         integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <!-- Materialize -->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <!-- Compiled and minified JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 
     <title>Chase Game</title>
 </head>
@@ -31,13 +27,61 @@
 <body>
 
     <div class="container">
-        <div class="row">
-            <div class="col s6">Test</div>
-            <div class="col s6">Test</div>
+
+        <h1 class="mx-auto" style="width: 20%">Game Setup</h1>
+
+        <div class="card mx-auto" style="width: 60%">
+            <div class="card-body">
+
+                <form th:action="@{/setup}" th:object="${gameSetup}" method="post">
+
+                    <!-- Mode -->
+                    <div class="row">
+                        <div class="col-4">
+                            <p class="game-setup-label">Mode:</p>
+                        </div>
+                        <div class="col-8">
+                            <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
+                                <input type="radio" class="btn-check" name="mode" value="chase" id="mode-chase"
+                                    autocomplete="off" checked>
+                                <label class="btn btn-outline-primary" for="mode-chase">Escape the Chase</label>
+
+                                <input type="radio" class="btn-check" name="mode" value="flag" id="mode-flag"
+                                    autocomplete="off">
+                                <label class="btn btn-outline-primary" for="mode-flag">Capture the Flag</label>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Enemies -->
+                    <div class="row">
+                        <div class="col-4">
+                            <p class="game-setup-label">Enemies:</p>
+                        </div>
+                        <div class="col-8">
+
+                            <div class="visual-select">
+                                <div class="option-enemy"></div>
+                                <div class="option-enemy"></div>
+                                <div class="option-enemy"></div>
+                                <div class="option-enemy"></div>
+                                <div class="option-empty"></div>
+                            </div>
+
+                        </div>
+                    </div>
+
+                    <button type="submit" class="btn btn-primary mb-3">Confirm</button>
+                </form>
+            </div>
         </div>
+
     </div>
 
-
+    <!-- Boostrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous">
+        </script>
 </body>
 
 </html>
