--- a/src/main/resources/templates/setup.html
+++ b/src/main/resources/templates/setup.html
@@ -58,14 +58,21 @@
                         <div class="col-4">
                             <p class="game-setup-label">Enemies:</p>
                         </div>
-                        <div class="col-8">
+                        <div class="col-8 d-flex justify-content-around">
 
-                            <div class="visual-select">
-                                <div class="option-enemy"></div>
-                                <div class="option-enemy"></div>
-                                <div class="option-enemy"></div>
-                                <div class="option-enemy"></div>
-                                <div class="option-empty"></div>
+                            <div class="arrow">
+                                <button class="btn btn-secondary" type="button" onclick="moveVisualSelect('left')">
+                                    <i class="fa-solid fa-caret-left"></i>
+                                </button>
+                            </div>
+
+                            <div id="visual-select-options">
+                            </div>
+
+                            <div class="arrow">
+                                <button class="btn btn-secondary" type="button" onclick="moveVisualSelect('right')">
+                                    <i class="fa-solid fa-caret-right"></i>
+                                </button>
                             </div>
 
                         </div>
@@ -82,6 +89,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous">
         </script>
+
+    <script type="text/javascript" th:src="@{components/visualSelect.js}"></script>
 </body>
 
 </html>
