--- a/src/main/resources/templates/setup.html
+++ b/src/main/resources/templates/setup.html
@@ -90,6 +90,11 @@
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous">
         </script>
 
+    <!-- injected variables -->
+    <script th:inline="javascript">
+        const GAME_SETUP = /*[[${gameSetup}]]*/ {};
+    </script>
+
     <script type="text/javascript" th:src="@{components/visualSelect.js}"></script>
 </body>
 
