link game js to db selected game setup

--- a/src/main/resources/templates/game.html
+++ b/src/main/resources/templates/game.html
@@ -75,6 +75,7 @@
 	<script th:inline="javascript">
 		const ROWS = /*[[${gameBoard.totalRows}]]*/ 5;
 		const COLS = /*[[${gameBoard.totalColumns}]]*/ 5;
+		const GAME_SETUP = /*[[${gameSetup}]]*/ {};
 	</script>
 
 	<script type="module" th:src="@{game/js/game.js}"></script>
