--- a/src/main/resources/templates/game.html
+++ b/src/main/resources/templates/game.html
@@ -19,13 +19,9 @@
 		integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
 		crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-	<!-- Materialize -->
-	<link href="https://fonts.googleapis.com/icon?family=Material+Icons">
-	<!-- Compiled and minified CSS -->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-	<!-- Compiled and minified JavaScript -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-
+	<!-- Bootstrap -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 
 	<title>Chase Game</title>
 </head>
@@ -35,41 +31,55 @@
 
 
 	<div class="row">
-		<div class="col s8">
+		<div class="col-8">
 			<div th:each="row : ${gameBoard.gameBoardRows}">
 				<div th:each="cell : ${row}" th:attr="data-x=${cell.coordinates.y}, data-y=${cell.coordinates.x}"
 					class="bo cell"></div>
 			</div>
 		</div>
-		<div class="col s4">
+		<div class="col-4">
 			<h3>Game Log</h3>
 			<div class="game-log">
-				<ul class="collection" id="messages">
+				<ul class="list-group" id="messages">
 				</ul>
 			</div>
 			<div>
-				<a th:href="@{/leaderboards}" class="waves-effect waves-light btn">View Leaderboards</a>
+				<a th:href="@{/leaderboards}" class="btn btn-primary">View Leaderboards</a>
 			</div>
 		</div>
 	</div>
 
 	<div class="row">
-		<div class="col s12">
+		<div class="col-12">
 			<h3>Timer</h3>
 			<div id="timer"></div>
 		</div>
 	</div>
 
-	<!-- Modal Structure -->
-	<div id="modal-end-game" class="modal">
-		<div class="modal-content">
-			<h4>Modal Header</h4>
-			<p>A bunch of text</p>
-		</div>
-		<div class="modal-footer">
 
+	<!-- Modal -->
+	<div class="modal fade" id="endGameModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+		aria-labelledby="endGameModalLabel" aria-hidden="true">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="end-game modal-header bg-gradient" id="container-modal-header">
+					<h5 class="end-game modal-title" id="endGameModalTitle"></h5>
+				</div>
+				<div class="end-game modal-body" id="endGameModalBody">
+				</div>
+				<div class="end-game modal-footer">
+					<a th:href="@{/}" type="button" class="btn btn-secondary">Main Menu</a>
+					<button onClick="window.location.reload();" type="button" class="btn btn-primary">Play
+						Again!</button>
+				</div>
+			</div>
 		</div>
 	</div>
+
+	<!-- Boostrap JS -->
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous">
+		</script>
 
 
 	<script th:inline="javascript">
