--- a/src/main/resources/templates/game.html
+++ b/src/main/resources/templates/game.html
@@ -38,7 +38,13 @@
 			</div>
 		</div>
 		<div class="col-4">
-			<h3>Game Log</h3>
+			<div class="text-center">
+				<h3>Score</h3>
+				<div class="score-container">
+					<span id="game-score">0</span>
+				</div>
+			</div>
+			<h4 class="text-center">Game Log</h4>
 			<div class="game-log">
 				<ul class="list-group" id="messages">
 				</ul>
