--- a/src/main/resources/templates/leaderboards.html
+++ b/src/main/resources/templates/leaderboards.html
@@ -19,39 +19,51 @@
         integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <!-- Materialize -->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <!-- Compiled and minified JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 
 
     <title>Chase Game</title>
 </head>
 
 <body>
-    <div class="container">
-        <ul class="collection">
-            <li th:each="score : ${scores}" class="collection-item avatar">
-                <div class="row">
-                    <div class="col s6">
-                        <i class="fa-solid fa-star"></i>
-                        <span th:text="${score.username}" class="title"></span>
-                        <span th:text="${score.score}"></span>
-                    </div>
-                    <div class="col s6 right-align">
-                        <span th:text="${score.date}"></span>
-                    </div>
-                </div>
-            </li>
-        </ul>
+    <div class="container pt-5">
+        <h1 class="text-center">LEADERBOARDS</h1>
+
+        <table class="table">
+            <thead>
+                <tr class="leaderboard-header">
+                    <th scope="col"></th>
+                    <th scope="col">#</th>
+                    <th scope="col">Username</th>
+                    <th scope="col">Score</th>
+                    <th scope="col">Date</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr class="leaderboard-row" th:each="score,iter : ${scores}">
+                    <td>
+                        <div class="star"><i class="fa-solid fa-star gold"></i></div>
+                    </td>
+                    <th th:text="${iter.index + 1}"></th>
+                    <td th:text="${score.username}"></td>
+                    <td th:text="${score.score}"></td>
+                    <td th:text="${score.date}"></td>
+                </tr>
+            </tbody>
+        </table>
 
         <div>
-            <a th:href="@{/game}" class="waves-effect waves-light btn">Back to Game</a>
+            <a th:href="@{/game}" type="button" class="btn btn-primary">Back to Game</a>
         </div>
     </div>
 
+
+    <!-- Boostrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous">
+        </script>
 </body>
 
 </html>
