--- a/src/main/resources/templates/game.html
+++ b/src/main/resources/templates/game.html
@@ -72,7 +72,7 @@
 		const GAME_SETUP = /*[[${gameSetup}]]*/ {};
 	</script>
 
-	<script type="module" th:src="@{game/js/game.js}"></script>
+	<script type="module" th:src="@{game/js/captureTheFlag/captureTheFlag.js}"></script>
 
 </body>
 
