--- a/src/main/resources/templates/leaderboards.html
+++ b/src/main/resources/templates/leaderboards.html
@@ -20,7 +20,7 @@
             <tbody>
 
                 <tr class="leaderboard-row" th:each="score,iter : ${scores}" id="leaderboard-row-${iter.index}"
-                    onclick="playAccordion(this)">
+                    th:onclick="playAccordion(this,[[${score}]])">
                     <td>
                         <div class="star"><i class="fa-solid fa-star gold"></i></div>
                     </td>
