--- a/src/main/resources/static/css/base.css
+++ b/src/main/resources/static/css/base.css
@@ -173,3 +173,10 @@
     align-items: center;
     background-color: #333333;
 }
+
+.cell-small {
+    display: inline-block;
+    height: 1rem;
+    width: 1rem;
+    border: 1px solid black;
+}
