add visual for leaderboard route map

--- a/src/main/resources/static/css/base.css
+++ b/src/main/resources/static/css/base.css
@@ -175,8 +175,11 @@
 }
 
 .cell-small {
-    display: inline-block;
     height: 1rem;
     width: 1rem;
     border: 1px solid black;
+}
+
+.cell-small-filled {
+    background-color: palevioletred;
 }
