--- a/src/main/resources/static/css/base.css
+++ b/src/main/resources/static/css/base.css
@@ -164,6 +164,20 @@
     font-size: 1.25rem;
 }
 
+.leaderboard-row:hover {
+    opacity: 0.6;
+}
+
+.leaderboard-row-detail {
+    background: rgb(138, 162, 158);
+    background: radial-gradient(circle, rgba(138, 162, 158, 1) 44%, rgba(61, 84, 103, 0.8323704481792717) 87%);
+    border-color: #2D4739;
+    color: #F1EDEE;
+    text-transform: uppercase;
+    font-size: 1.25rem;
+}
+
+
 .star {
     border-radius: 50%;
     height: 2rem;
@@ -178,8 +192,13 @@
     height: 1rem;
     width: 1rem;
     border: 1px solid black;
+    background-color: #a4d188;
 }
 
 .cell-small-filled {
     background-color: palevioletred;
+}
+
+.level-map-table {
+    margin: auto;
 }
