--- a/src/main/resources/static/css/base.css
+++ b/src/main/resources/static/css/base.css
@@ -183,10 +183,14 @@
 }
 
 .cell-small {
-    height: 1rem;
-    width: 1rem;
+    height: 1.5rem;
+    width: 1.5rem;
     border: 1px solid black;
     background-color: #a4d188;
+    color: black;
+    font-size: .5rem;
+    text-align: center;
+    font-weight: 600;
 }
 
 .cell-small-filled {
@@ -194,5 +198,5 @@
 }
 
 .level-map-table {
-    margin: auto;
+    margin-left: auto;
 }
