add events and events manager

--- a/src/main/resources/templates/game.html
+++ b/src/main/resources/templates/game.html
@@ -5,6 +5,7 @@
 
 <body>
 
+	<span id="eventElement"></span>
 	<div class="game-container">
 		<div class="game-board">
 			<div th:each="row : ${gameBoard.gameBoardRows}">
