--- a/src/main/resources/templates/game.html
+++ b/src/main/resources/templates/game.html
@@ -53,7 +53,15 @@
 				<div class="end-game modal-header bg-gradient" id="container-modal-header">
 					<h5 class="end-game modal-title" id="endGameModalTitle"></h5>
 				</div>
-				<div class="end-game modal-body" id="endGameModalBody">
+				<div class="end-game modal-body">
+					<div id="endGameModalBody">
+					</div>
+					<br>
+					<div id="endGameModalBodySaveScorePrompt">
+						<input type="text" class="form-control" placeholder="Enter Username" aria-label="Username"
+							id="postUsername">
+						<button id="postScore" type="button" class="btn btn-primary">Save Score!</button>
+					</div>
 				</div>
 				<div class="end-game modal-footer">
 					<a th:href="@{/}" type="button" class="btn btn-secondary">Main Menu</a>
