update ui with spinner and background

--- a/src/main/resources/static/css/base.css
+++ b/src/main/resources/static/css/base.css
@@ -1,3 +1,10 @@
+html {
+    background-image: url('../media/pngs/yoal-desurmont-jqgsM3B9Fpo-unsplash.jpg');
+}
+body{
+    background-color: transparent !important;
+}
+
 .test {
     background-color: red !important;
 }
