--- a/src/main/resources/templates/game.html
+++ b/src/main/resources/templates/game.html
@@ -54,14 +54,21 @@
 					<h5 class="end-game modal-title" id="endGameModalTitle"></h5>
 				</div>
 				<div class="end-game modal-body">
-					<div id="endGameModalBody">
+					<div class=" row align-items-center  justify-content-center">
+						<div class="col-12 w-50" id="endGameModalBody">
+						</div>
 					</div>
-					<br>
-					<div id="endGameModalBodySaveScorePrompt">
-						<input type="text" class="form-control" placeholder="Enter Username" aria-label="Username"
-							id="postUsername">
-						<button id="postScore" type="button" class="btn btn-primary">Save Score!</button>
+
+					<div class="row align-items-center justify-content-center">
+						<div class="col-12 w-50" id="endGameModalBodySaveScorePrompt">
+							<input type="text" class="form-control" placeholder="Enter Username" aria-label="Username"
+								id="postUsername">
+							<div class="d-flex justify-content-center  mt-3">
+								<button id="postScore" type="button" class="btn btn-success">Save Score!</button>
+							</div>
+						</div>
 					</div>
+
 				</div>
 				<div class="end-game modal-footer">
 					<a th:href="@{/}" type="button" class="btn btn-secondary">Main Menu</a>
