--- a/src/main/resources/static/css/base.css
+++ b/src/main/resources/static/css/base.css
@@ -165,6 +165,15 @@ body{
     font-size: 1.25rem;
 }
 
+.base-gradient-style {
+    background: rgb(138, 162, 158);
+    background: radial-gradient(circle, rgba(138, 162, 158, 1) 44%, rgba(61, 84, 103, 0.8323704481792717) 87%);
+    border-color: #2D4739;
+    color: #F1EDEE;
+    text-transform: uppercase;
+    font-size: 1.25rem;
+}
+
 .leaderboard-row:hover {
     opacity: 0.6;
 }
