--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -8,14 +8,14 @@
 
     <div class="container">
         <div class="row">
-            <div class="col s12">
+            <div class="col s12 base-gradient-style">
                 <h1>Chase Game</h1>
             </div>
             <div class="row">
-                <div class="col s6 center-align">
+                <div class="col s6 center-align base-gradient-style">
                     <a class="waves-effect waves-light btn" th:href="@{/game}">Start Game</a>
                 </div>
-                <div class="col s6 center-align">
+                <div class="col s6 center-align base-gradient-style">
                     <a class="waves-effect waves-light btn" th:href="@{/setup}">Setup</a>
                 </div>
             </div>
