--- a/src/main/resources/templates/setup.html
+++ b/src/main/resources/templates/setup.html
@@ -10,7 +10,7 @@
 
         <h1 class="mx-auto" style="width: 20%">Game Setup</h1>
 
-        <div class="card mx-auto" style="width: 60%">
+        <div class="card base-gradient-style mx-auto" style="width: 60%">
             <div class="card-body">
 
                 <!-- Mode -->
@@ -25,7 +25,7 @@
                             <label class="btn btn-outline-primary" for="mode-chase">Escape the Chase</label>
 
                             <input type="radio" class="btn-check" name="mode" value="flag" id="mode-flag"
-                                autocomplete="off">
+                                autocomplete="off" disabled="true">
                             <label class="btn btn-outline-primary" for="mode-flag">Capture the Flag</label>
                         </div>
                     </div>
@@ -103,8 +103,8 @@
                 </div>
 
 
-
-                <button type="submit" class="btn btn-primary mb-3" onclick="postGameSetup()">Confirm</button>
+                <a th:href="@{/}" type="button" class="btn btn-secondary">Main Menu</a>
+                <button id="postSetup" type="submit" class="btn btn-primary" onclick="postGameSetup()">Confirm</button>
             </div>
         </div>
 
