--- a/src/main/resources/templates/game.html
+++ b/src/main/resources/templates/game.html
@@ -5,89 +5,100 @@
 
 <body>
 
-	<div class="game-container">
-		<div class="game-board">
-			<div th:each="row : ${gameBoard.gameBoardRows}">
-				<div th:each="cell : ${row}" th:attr="data-x=${cell.coordinates.y}, data-y=${cell.coordinates.x}"
-					class="bo cell"></div>
-			</div>
-		</div>
-	</div>
-	<div class="d-flex">
-		<div class="w-25 d-flex flex-column align-items-center">
-			<h3>Timer</h3>
-			<div id="timer"></div>
-		</div>
+<div class="game-container">
+    <div class="game-board">
+        <div th:each="row : ${gameBoard.gameBoardRows}">
+            <div th:each="cell : ${row}" th:attr="data-x=${cell.coordinates.y}, data-y=${cell.coordinates.x}"
+                 class="bo cell"></div>
+        </div>
+    </div>
 
-		<div class="w-75">
+</div>
+<div class="d-flex">
+    <div class="w-25 d-flex flex-column align-items-center">
+        <h3 id="test">Timer</h3>
+        <h2></h2>
+        <div id="timer"></div>
+    </div>
 
-			<div class="d-flex">
-				<div class="w-50">
-					<div class="d-flex flex-column align-items-center">
-						<h3>Score</h3>
-						<div class="score-container text-center">
-							<span id="game-score">0</span>
-						</div>
-					</div>
-				</div>
-				<div class="w-50 d-flex flex-column align-items-center">
-					<h4 class="text-center">Game Log</h4>
-					<div class="game-log">
-						<ul class="list-group" id="messages">
-						</ul>
-					</div>
-					<div>
-						<a th:href="@{/leaderboards}" class="btn btn-primary">View Leaderboards</a>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+    <div class="w-75">
+        <div class="d-flex">
+            <div class="w-50">
+                <div class="d-flex flex-column align-items-center">
+                    <h3>Score</h3>
+                    <div class="score-container text-center">
+                        <span id="game-score">0</span>
+                    </div>
+                </div>
+            </div>
+            <div class="w-50 d-flex flex-column align-items-center">
+                <h4 class="text-center">Game Log</h4>
+                <div class="game-log">
+                    <ul class="list-group" id="messages">
+                    </ul>
+                </div>
+                <div>
+                    <a th:href="@{/leaderboards}" class="btn btn-primary">View Leaderboards</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 
-	<!-- Modal -->
-	<div class="modal fade" id="endGameModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
-		aria-labelledby="endGameModalLabel" aria-hidden="true">
-		<div class="modal-dialog">
-			<div class="modal-content">
-				<div class="end-game modal-header bg-gradient" id="container-modal-header">
-					<h5 class="end-game modal-title" id="endGameModalTitle"></h5>
-				</div>
-				<div class="end-game modal-body">
-					<div class=" row align-items-center  justify-content-center">
-						<div class="col-12 w-50" id="endGameModalBody">
-						</div>
-					</div>
+<!-- Modal -->
+<div class="modal fade" id="endGameModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+     aria-labelledby="endGameModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="end-game modal-header bg-gradient" id="container-modal-header">
+                <h5 class="end-game modal-title" id="endGameModalTitle"></h5>
+            </div>
+            <div class="end-game modal-body">
+                <div class=" row align-items-center  justify-content-center">
+                    <div class="col-12 w-50" id="endGameModalBody">
+                    </div>
+                </div>
 
-					<div class="row align-items-center justify-content-center">
-						<div class="col-12 w-50" id="endGameModalBodySaveScorePrompt">
-							<input type="text" class="form-control" placeholder="Enter Username" aria-label="Username"
-								id="postUsername">
-							<div class="d-flex justify-content-center  mt-3">
-								<button id="postScore" type="button" class="btn btn-success">Save Score!</button>
-							</div>
-						</div>
-					</div>
+                <div class="row align-items-center justify-content-center">
+                    <div class="d-flex flex-column align-items-center justify-content-center">
+                        <div class="w-50 text-center" id="endGameModalBodySaveScorePrompt">
+                        </div>
+                        <div class="w-50">
+                            <input type="text" class="form-control" placeholder="Enter Username"
+                                   aria-label="Username"
+                                   id="postUsername">
+                        </div>
+                        <div class="mt-3">
+                            <button id="postScore" type="button" class="btn btn-success">Save Score!</button>
+                        </div>
+                        <div id="errorScore"
+                             class="badge d-none rounded-pill text-bg-danger mt-3">Please enter your username!
+                        </div>
+                    </div>
+                </div>
 
-				</div>
-				<div class="end-game modal-footer">
-					<a th:href="@{/}" type="button" class="btn btn-secondary">Main Menu</a>
-					<button onClick="window.location.reload();" type="button" class="btn btn-primary">Play
-						Again!</button>
-				</div>
-			</div>
-		</div>
-	</div>
+            </div>
+            <div class="end-game modal-footer">
+                <a th:href="@{/}" type="button" class="btn btn-secondary">Main Menu</a>
+                <a th:href="@{/leaderboards}" type="button" class="btn btn-secondary">Leaderboards</a>
+                <button onClick="window.location.reload();" type="button" class="btn btn-primary">Play
+                    Again!
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
 
-	<div th:replace="fragments/post-load-js.html :: bootstrap"></div>
+<div th:replace="fragments/post-load-js.html :: bootstrap"></div>
 
-	<script th:inline="javascript">
-		const ROWS = /*[[${gameBoard.totalRows}]]*/ 5;
-		const COLS = /*[[${gameBoard.totalColumns}]]*/ 5;
-		const GAME_SETUP = /*[[${gameSetup}]]*/ {};
-	</script>
+<script th:inline="javascript">
+    const ROWS = /*[[${gameBoard.totalRows}]]*/ 5;
+    const COLS = /*[[${gameBoard.totalColumns}]]*/ 5;
+    const GAME_SETUP = /*[[${gameSetup}]]*/ {};
+</script>
 
-	<script type="module" th:src="@{game/js/game.js}"></script>
+<script type="module" th:src="@{game/js/game.js}"></script>
 
 </body>
 
